unpackaged/main/default/objects/pse__Utilization_Run__c/pse__Utilization_Run__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__UtilizationRunHelp</customHelpPage>
    <description>Stores the calculation criteria for a utilization run.</description>
    <label>Utilization Run</label>
    <nameField>
        <displayFormat>UR-{000000}</displayFormat>
        <label>Utilization Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>