unpackaged/main/default/objects/pse__Utilization_Run__c/fields/pse__Process_Completed__c.field-meta.xml
<CustomField>
    <fullName>pse__Process_Completed__c</fullName>
    <description>The date and time that the utilization run process completed.</description>
    <inlineHelpText>The date and time that the utilization run process completed.</inlineHelpText>
    <label>Deprecated:Process Completed</label>
    <type>DateTime</type>
</CustomField>