unpackaged/main/default/objects/pse__Utilization_Run__c/fields/pse__Process_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Process_End_Date_Time__c</fullName>
    <description>The date and time that the utilization run process completed.</description>
    <inlineHelpText>The date and time that the utilization run process completed.</inlineHelpText>
    <label>Process End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>