unpackaged/main/default/objects/pse__Utilization_Run__c/fields/pse__Process_Started__c.field-meta.xml
<CustomField>
    <fullName>pse__Process_Started__c</fullName>
    <description>The date and time that the utilization run process started.</description>
    <inlineHelpText>The date and time that the utilization run process started.</inlineHelpText>
    <label>Deprecated:Process Started</label>
    <type>DateTime</type>
</CustomField>