unpackaged/main/default/objects/pse__Utilization_Run__c/fields/pse__Start_Date_Of_Changes__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date_Of_Changes__c</fullName>
    <description>The start date based on the Only Include Changes checkbox for this utilization run.</description>
    <inlineHelpText>The start date based on the Only Include Changes checkbox for this utilization run.</inlineHelpText>
    <label>Start Date of Changes</label>
    <type>Date</type>
</CustomField>