unpackaged/main/default/objects/pse__Utilization_Run__c/fields/pse__Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Batches__c</fullName>
    <description>The number of batches for this utilization run.</description>
    <inlineHelpText>The number of batches for this utilization run.</inlineHelpText>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>